--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                 <div class="date" id="current-date">Lundi 15 mai</div>
                 
                 <div class="apps-grid">
-                    <a href="https://www.instagram.com/pro.designer.dz?igsh=MWFwaDRwamtpdmFwMw==" target="_blank" class="app instagram notification">
+                    <a href="https://www.instagram.com/mart_dellivery_/" target="_blank" class="app instagram notification">
                         <div class="app-icon">
                             <i class="fab fa-instagram"></i>
                         </div>
