--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             flex: 1;
             position: relative;
             overflow: hidden;
-            background: linear-gradient(135deg, #250D8F 0%, #7361FF 100%);
+            background: linear-gradient(135deg, #250D8F 0%, #080047 100%);
         }
 
         .lock-screen {
@@ -570,6 +570,11 @@
             <!-- Écran d'accueil -->
             <div class="home-screen" id="home-screen">
                 <div class="date" id="current-date">Lundi 15 mai</div>
+                <div class="logo-container">
+                        <div class="logo">
+                            <img src="mART Delivery.png" alt="MART DELIVERY" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+                        </div>
+                </div>
                 
                 <div class="apps-container">
                     <!-- Social Media Row -->
