--- a/index.html
+++ b/index.html
@@ -586,12 +586,12 @@
                             <span class="app-name">Instagram</span>
                         </a>
                         
-                        <a href="https://www.facebook.com/profile.php?id=100087905974418" target="_blank" class="app facebook">
+                        <!-- <a href="https://www.facebook.com/profile.php?id=100087905974418" target="_blank" class="app facebook">
                             <div class="app-icon">
                                 <i class="fab fa-facebook-f"></i>
                             </div>
                             <span class="app-name">Facebook</span>
-                        </a>
+                        </a> -->
                     </div>
                     
                     <!-- Phone Numbers Row -->
