--- a/index.html
+++ b/index.html
@@ -438,6 +438,7 @@
             align-items: center;
             gap: 8px;
             cursor: pointer;
+            margin : -5px;
             transition: var(--transition);
             position: relative;
             text-decoration: none;
