--- a/index.html
+++ b/index.html
@@ -438,11 +438,11 @@
             align-items: center;
             gap: 8px;
             cursor: pointer;
-            margin : -5px;
+            margin : -8px;
             transition: var(--transition);
             position: relative;
             text-decoration: none;
-            padding: 15px;
+            padding: 10px;
             background: var(--glass);
             backdrop-filter: blur(10px);
             border-radius: 15px;
@@ -634,12 +634,12 @@
                             <span class="app-name">Instagram</span>
                         </a>
                         
-                        <a href="https://www.facebook.com/profile.php?id=100087905974418" target="_blank" class="app facebook">
+                        <!-- <a href="https://www.facebook.com/profile.php?id=100087905974418" target="_blank" class="app facebook">
                             <div class="app-icon">
                                 <i class="fab fa-facebook-f"></i>
                             </div>
                             <span class="app-name">Facebook</span>
-                        </a>
+                        </a> -->
                     </div>
                     
                     <!-- Phone Numbers Row -->
